--- a/package.json
+++ b/package.json
@@ -1,19 +1,12 @@
+
 {
-  "name": "ssr-integtest-nextjs-v12",
   "private": true,
+  "workspaces": [
+    "apps/*"
+  ],
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.0.7",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
-  },
-  "devDependencies": {
-    "eslint": "7",
-    "eslint-config-next": "12.0.7"
+    "dev": "yarn --cwd apps/nextjs-app dev",
+    "build": "yarn --cwd apps/nextjs-app build",
+    "start": "yarn --cwd apps/nextjs-app start"
   }
 }
